# zed-bitpeek

./: AGENTS.md  Cargo.toml  README.md  extension.toml
language_server/: package-lock.json  package.json
language_server/src/: server.js
src/: bitpeek.rs  hexpeek.rs  server.rs
