[package]
name = "zed-bitpeek"
version = "0.1.3"
edition = "2024"
publish = false

[lib]
path = "src/bitpeek.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bitpeek-lsp"
path = "src/server.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = { version = "0.95", features = ["proposed"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zed_extension_api = "0.7.0"
